# ml_dagster

./: README.md
mnist_ml_project/: .gitignore  README.md  pyproject.toml
mnist_ml_project/src/mnist_ml_project/: definitions.py
mnist_ml_project/src/mnist_ml_project/defs/: __init__.py  asset_checks.py  constants.py  jobs.py  resources.py  schedules.py  sensors.py  types.py  utils.py
mnist_ml_project/src/mnist_ml_project/defs/assets/: __init__.py  data_assets.py  model_assets.py  prediction_assets.py
mnist_ml_project/tests/: conftest.py  test_data_assets.py  test_full_pipeline.py  test_model.py
